kodekloud-ingress-task/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress-space
spec:
  type: NodePort
  selector:
    name: nginx-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
      name: https
